# Projects

./: .gitignore  README.md
Algori/: README.md
Algori/algori/: Cargo.toml  style.css
Algori/algori/schemas/: gschemas.compiled
Algori/algori/src/: main.rs
Algori/algori/src/views/: array.rs  binary_search.rs  bit_manipulation.rs  dijkstra.rs  graph.rs  help.rs  linked_list.rs  math.rs  mod.rs  queue.rs  sorting.rs  stack.rs  tree.rs
Apagar-Linux/: Apagar_PC  Apagar_PC.c
Avenue119/: contacto.html  index.html  nosotros.html  servicios.html
Avenue119/js/: scripts.js
Chess/: Chess  Chess.sln  README.md  current_best.txt
Chess/Chess/: Chess.vcxproj  Chess.vcxproj.filters
Chess/Chess/include/: Board.h  Game.h  Player.h
Chess/Chess/include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Pieces.h  Queen.h  Rook.h
Chess/Chess/src/: Board.cpp  Chess.cpp
Chess/Chess/src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Pieces.cpp  Queen.cpp  Rook.cpp
Chess/chess/: Cargo.toml
Chess/chess/src/: main.rs
Chess/chess/src/engine/: evaluation.rs  mod.rs  network.rs  opening.rs  search.rs
Chess/chess/src/game/: bitboard.rs  board.rs  castle.rs  chess.rs  constants.rs  directions.rs  game.rs  mod.rs  moves.rs  perft.rs  piece.rs  position.rs  square.rs  tt.rs  uci.rs  zobrist.rs
Chess/chess/src/uci/: direction.rs  game.rs  menu.rs  mod.rs
Chess/chess/src/ui/: menu.rs
Code-Editor/: CMakeLists.txt  Cursor.cpp  Cursor.h  README.md  main.cpp
Code-Editor/include/: Buffer.h  Cursor.h  Editor.h  Render.h
Code-Editor/src/: Buffer.cpp  Cursor.cpp  Editor.cpp  Render.cpp
EzGit/: CMakeLists.txt  README.md
EzGit/include/: GitManager.h
EzGit/src/: GitManager.cpp  main.cpp
Graph-Algo-Visual/: CMakeLists.txt
Graph-Algo-Visual/include/: Algorithms.h  Graph.h
Graph-Algo-Visual/include/Algorithms/: DFS.h
Graph-Algo-Visual/src/: Algorithms.cpp  Graph.cpp
Graph-Algo-Visual/src/Algorithms/: DFS.cpp
ImagenRGB/: CMakeLists.txt
ImagenRGB/include/: image.h
ImagenRGB/src/: image.cpp
Linear-system-equation/Linear-system/doc/html/: Bigram_8cpp.html  Bigram_8cpp_source.html  Bigram_8h.html  Bigram_8h_source.html  classBigram.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  main_8cpp_source.html
Linear-system-equation/Linear-system/doc/latex/: Bigram_8cpp.tex  Bigram_8h.tex  classBigram.tex  files.tex  refman.tex
Linear-system-equation/Linear-system/include/: Solver.h
Linear-system-equation/Linear-system/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Linear-system-equation/Linear-system/nbproject/private/: private.xml
Linear-system-equation/Linear-system/src/: Solver.cpp  main.cpp
Marble-Sim/: CMakeLists.txt  README.md
Marble-Sim/.cache/clangd/index/: main.cpp.4E0750B261CB54E8.idx  shader.cpp.3E438491049F2A6D.idx  shader.h.7D835D519B5556CA.idx  shader.h.AC1F66B98E9D1448.idx  stb_image.h.09DC9DAC35A43BDC.idx
Marble-Sim/include/: shader.h
Marble-Sim/shaders/: shader.fs  shader.vs
Marble-Sim/src/: main.cpp  shader.cpp
MvrSTL/: CMakeLists.txt
MvrSTL/include/: unique_ptr.h
ONE/: README.md
ONE/one/: 404.html  500.html  example.html
ONE/one/src/: lib.rs  main.rs
ONE/otcp/: Cargo.toml
ONE/otcp/src/: lib.rs  state.rs  tcp.rs
OhMaze/ohmaze/: Cargo.toml
OhMaze/ohmaze/config/: map.txt
OhMaze/ohmaze/src/: main.rs
OhMaze/ohmaze/src/components/: item.rs  map.rs  mod.rs  player.rs  tile.rs
OhMaze/ohmaze/src/entities/: item.rs  player.rs
OhMaze/ohmaze/src/resources/: map.rs
OhMaze/ohmaze/src/systems/: movement.rs
Owm/: README.md
Owm/owm/: Cargo.toml
Owm/owm/src/: main.rs
Oxide-Algori/algori/: README.md  analysis_options.yaml  pubspec.yaml
Oxide-Algori/algori/android/app/: build.gradle
Oxide-Algori/algori/lib/: app_bottom_nav.dart  main.dart  user_preferences.dart
Oxide-Algori/algori/linux/: CMakeLists.txt  my_application.cc
Oxide-Algori/algori/test/: widget_test.dart
Oxide-Algori/algori/web/: index.html  manifest.json
Oxide-Algori/algori/windows/: CMakeLists.txt
Oxide-Database/: Cargo.toml  README.md  data
Oxide-Database/src/: cache.rs  database.rs  log.rs  main.rs  table.rs
Oxide-Database/src/storage/: page.rs  table.rs
Oxide-Editor/: Cargo.toml  README.md
Oxide-Editor/src/: buffer.rs  editor.rs  main.rs  status_bar.rs  style.rs  syntax.rs  terminal.rs
Oxide-Editor/src/buffer/: buffer.rs
Oxide-Editor/src/editor/: terminal.rs
Oxide-Kart/: Cargo.toml
Oxide-Tower-Defense/: Cargo.toml  mapa
Oxide-Tower-Defense/src/: component.rs  main.rs
Oxide-Tower-Defense/src/components/: cell.rs  component.rs  mod.rs  player.rs
Oxlang/oxlang/: Cargo.toml  out  out.ll
Oxlang/oxlang/src/: main.rs
Oxsync/oxsync/: Cargo.toml
Oxsync/oxsync/src/: config.rs  main.rs  watcher.rs
Ridmaze/: CMakeLists.txt  Chest.cpp  Chest.h  Dice.cpp  Dice.h  Player.cpp  Player.h  README.md  Weapon.cpp  Weapon.h
Ridmaze/assets/levels/: level0.txt  level1.txt
Ridmaze/include/: Chest.h  CombatElement.h  Dice.h  Directions.h  GUI.h  Game.h  GameCharacter.h  GameController.h  GameState.h  Labyrinth.h  LabyrinthCharacter.h  Level.h  Menu.h  Monster.h  Orientation.h  Player.h  Settings.h  Shield.h  TextUI.h  UI.h  Weapon.h
Ridmaze/src/: CombatElement.cpp  Dice.cpp  GUI.cpp  Game.cpp  GameController.cpp  GameState.cpp  Labyrinth.cpp  LabyrinthCharacter.cpp  Level.cpp  Menu.cpp  Monster.cpp  Player.cpp  Settings.cpp  Shield.cpp  TextUI.cpp  Weapon.cpp  main.cpp
Spell-Checker/: CMakeLists.txt  README.md  Spell-Checker
Spell-Checker/include/: Corrector.h  Dictionary.h  Learner.h  NeuralNetwork.h  Trie.h  Utils.h
Spell-Checker/resources/: spanish.txt
Spell-Checker/src/: Corrector.cpp  Dictionary.cpp  Learner.cpp  NeuralNetwork.cpp  Trie.cpp  Utils.cpp  main.cpp
Tree/: CMakeLists.txt  README.md  tree.cpp  tree.h
Useful-C++/: README.md  algorithms.cpp  mybenchmark
neural_network/: Cargo.toml
neural_network/src/: main.rs
(+22 files in other folders)
